# WEDGE

./: LICENSE  README.md  WEDGE.WH2AnnData.py  WEDGE_recovery.asv  WEDGE_recovery.m  change_W_H_to__AnnData.py  change_W_H_to_gene_expression.R  main_demo.m
Data/: calculate_CMD.m  calculate_Pearson_Correlation.m  cluster_Figure1.py  cluster_SF2.py  cluster_Zeisel&Baron.py  clustering_for_Zeisel_Baron_data.py  clustering_for_simulated_data_Figure1.py  clustering_for_simulated_data_SupplementaryFig2.py
Data/Baron/: Mark_gene.csv  cellType.csv  heatmap.R
Data/SF2/: counts.csv  truecounts.csv
Data/SupplementaryFig2/: Reference.csv  cellinfo.csv  geneinfo.csv
Data/Zeisel/: Label.csv  Mark_gene.csv  heatmap.R
Data/figure1/: Mark_gene.csv  Observed.tsv  Reference.csv  cellType.csv  cellinfo.csv  count.csv  geneinfo.csv  heatmap.R  readme.txt
Data/figure3/: ClusterOtherMethod.R  Raw_and_WEDGE_markGeneExpression.R  SupplementaryFig9.R  WEDGE_Cluster.R  filterGeneAndCell_ClusteringRawData.R  plot_GeneExpression.py  readme.txt
Data/figure3/other_Methods_Imputation/: Methods_of_MATLAB_Verision.m  enhance_test.py  methods_of_R_Verision.R  test_dca.txt  test_enhance.txt  test_magic.py  ~$st_memory.docx
Data/figure4/: Cluster.R  Ref_Label.csv  WEDGE_Label.csv  cellNames.csv  geneNames.csv  plot_F4abc.m  plot_F4d.R  readme.txt
WEDGE_MATLAB/: WEDGE_recovery.m
WEDGE_Python/: CMakeLists.txt  NNLS.cpp  WEDGE.py  libNNLS.cp38-win_amd64.pyd  setup.py  test_WEDGE.ipynb
res/: H.csv  W.csv  WEDGE_recovery.csv  cellName.csv  geneName.csv
(+4 files in other folders)
